--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,15 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 elseif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
     set(EXTERNAL_LIB_PATH "${EXTERNAL}/lib/linux" "/usr/lib64")
 elseif(WIN32)
-    set(EXTERNAL_LIB_PATH "${EXTERNAL}/lib/win")
+    if(${MSVC_VERSION} MATCHES "1900")
+        set(EXTERNAL_LIB_PATH "${EXTERNAL}/lib/win/vc2015")
+    elseif(${MSVC_VERSION} MATCHES "1800")
+        set(EXTERNAL_LIB_PATH "${EXTERNAL}/lib/win/vc2013")
+    elseif(${MSVC_VERSION} MATCHES "1700")
+        set(EXTERNAL_LIB_PATH "${EXTERNAL}/lib/win/vc2012")
+    else()
+        MESSAGE("Error: unsupported MSVC_VERSION: " ${MSVC_VERSION})
+    endif()
 endif()
 link_directories(${EXTERNAL_LIB_PATH})
 list(APPEND CMAKE_LIBRARY_PATH "${EXTERNAL_LIB_PATH}")
