--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,7 +66,7 @@ endif()
 
 # Crucial magic for CUDA linking
 find_package(Threads REQUIRED)
-find_package(CUDA 8.0 REQUIRED)
+find_package(CUDA REQUIRED)
 
 set(CUDA_ATTACH_VS_BUILD_RULE_TO_CUDA_FILE ON)
 set(CUDA_SEPARABLE_COMPILATION ON)
