--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,9 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 elseif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
     set(EXTERNAL_LIB_PATH "${EXTERNAL}/lib/linux" "/usr/lib64")
 elseif(WIN32)
-    if(${MSVC_VERSION} MATCHES "1900")
+    if(${MSVC_VERSION} MATCHES "1915")
+        set(EXTERNAL_LIB_PATH "${EXTERNAL}/lib/win/vc2015")
+    elseif(${MSVC_VERSION} MATCHES "1900")
         set(EXTERNAL_LIB_PATH "${EXTERNAL}/lib/win/vc2015")
     elseif(${MSVC_VERSION} MATCHES "1800")
         set(EXTERNAL_LIB_PATH "${EXTERNAL}/lib/win/vc2013")
