--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,8 @@ set(SOURCE_FILES
     "kernel.cu"
     )
 
+# IMPORTANT: Edit -arch to your GPU's sm version.
+# e.g: compute compatibility 3.5 --> sm_35
 cuda_add_library(src
     ${SOURCE_FILES}
     OPTIONS -arch=sm_20
